cluster/apps/home/zigbe2mqtt/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
      - image: koenkk/zigbee2mqtt:1.35.3
        name: zigbee2mqtt
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        - name: usb
          mountPath: /dev/ttyUSB0
        - name: udev
          mountPath: /run/udev
        securityContext:
          privileged: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-data
      - name: usb
        hostPath:
          path: /dev/ttyUSB0
      - name: udev
        hostPath:
          path: /run/udev
