cluster/apps/home/zigbe2mqtt/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home
  labels:
    app: zigbee2mqtt
spec:
  ports:
  - port: 8080
    targetPort: http
  selector:
    app: zigbee2mqtt
