cluster/apps/home/zigbe2mqtt/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: z2m-01.kng.house
spec:
  ingressClassName: nginx
  rules:
    - host: z2m-01.kng.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
  tls:
    - hosts:
        - z2m-01.kng.house
      secretName: homepage-tls
